--- a/tv1.html
+++ b/tv1.html
@@ -7,6 +7,19 @@
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 
     <style>
+        @keyframes colorChange {
+            25% { color :rgb(81, 22, 38)}
+            80% { color: rgb(255, 0, 0); }
+            80% { color: rgb(29, 238, 29); }
+            90% { color: rgb(237, 237, 29); }
+            50% { color: rgb(182, 8, 182); }
+            40% { color: rgb(30, 30, 235); }
+        }
+
+        .color-changing {
+            font-size: 4em;
+            animation: colorChange 3s infinite;
+        }
         body {
             display: flex;
             justify-content: center;
@@ -23,6 +36,9 @@
     </style>
 </head>
 <body>
+
+    <tex align ="center"> <h1 class="color-changing">سلام ازافغانستان</h1><br>
+   
     <video id="video" controls></video>
     <script>
         const video = document.getElementById('video');
