--- a/L2/tv4.html
+++ b/L2/tv4.html
@@ -56,6 +56,8 @@ video {
     width: 80%;
     max-width: 800px;
     margin-top: 20px;
+    border: 2px solid #ccc;
+    border-radius: 8px;
 }
     </style>
 </head>
