--- a/tv8.html
+++ b/tv8.html
@@ -40,6 +40,7 @@
             max-width: 600px;
             border: 1px solid #ccc;
             border-radius: 8px;
+            margin: 50px;
         }
     </style>
 </head>
