--- a/tv7.html
+++ b/tv7.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 
-    <tex align ="center"> <h1 class="color-changing">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;(🇦🇫) سلام از افغانستان (🇦🇫)</h1><br>
+    <tex align ="center"> <h1 class="color-changing"> <!--&nbsp; &nbsp; &nbsp; &nbsp;-->(🇦🇫) سلام از افغانستان (🇦🇫)</h1><br>
    
       
         <br> <br>
