--- a/tv8.html
+++ b/tv8.html
@@ -36,8 +36,8 @@
         }
         video {
             margin: 0;
-            width: 120%;
-            max-width: 800px;
+            width: 100%;
+            max-width: 600px;
             border: 1px solid #ccc;
             border-radius: 8px;
             margin: 50px;
@@ -46,7 +46,7 @@
 </head>
 <body>
 
-    <tex align ="center"> <h1 class="color-changing">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;(🇦🇫) سلام از افغانستان (🇦🇫)</h1><br>
+    <tex align ="center"> <h1 class="color-changing"><!--&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;-->(🇦🇫) سلام از افغانستان (🇦🇫)</h1><br>
    
       
         <br> <br>
