--- a/L2/tv7.html
+++ b/L2/tv7.html
@@ -36,8 +36,8 @@
 }
 
 @keyframes marquee {
-     100% { transform: translateX(=100%); }
-   0% { transform: translateX(=100%); }
+     50% { transform: translateX(50%); }
+   50% { transform: translateX(50%); }
 }
 
 @keyframes colorChange {
