--- a/tv1.html
+++ b/tv1.html
@@ -22,7 +22,7 @@
         }
 
         .color-changing {
-            font-size: 3,5m;
+            font-size: 3m;
             animation: colorChange 5s infinite;
            
 
@@ -59,7 +59,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'http://honeybee.watch:25461/live/Mckee547/Mckee777/515737.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'https://stream.sainaertebat.com/hls2/solhtv.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
