--- a/L2/tv1.html
+++ b/L2/tv1.html
@@ -50,7 +50,7 @@
     100% { color: blue; }
 }
 .color-changing {
-            font-size: 50em;
+            font-size:3 px;
             animation: colorChange 3s infinite;
            
         }
