--- a/tv1.html
+++ b/tv1.html
@@ -22,7 +22,7 @@
         }
 
         .color-changing {
-            font-size: 3m;
+            font-size: 3em;
             animation: colorChange 5s infinite;
            
 
