--- a/tv3.html
+++ b/tv3.html
@@ -22,7 +22,7 @@
         }
 
         .color-changing {
-            font-size: 3,5m;
+            font-size: 2,5em;
             animation: colorChange 5s infinite;
            
 
